noticed the menu links were not responding on the bottom thanks to teh .content div overlaying slightly. Gave both .menu div and .menu-links a z-index of 100 which fixed the issue. Also, gave the submit button a pointer cursor and an active styling to appear to be 'pushed in'

--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ header {
 .hamburger {width: 4em; display: none; z-index: 99;}
 img {width: 100%;}
 
-.menu {width: 100%; height: 2em; float: left; background-color: #fcfcfc;}
+.menu {width: 100%; height: 2em; float: left; background-color: #fcfcfc; z-index: 100;}
 
 nav ul {
 	display: flex;
@@ -44,14 +44,13 @@ nav ul {
 	margin: 0 .3em;
 	background-color: #fcfcfc;
 	transform: skew(20deg);
-/*
 	transition-property: height, box-shadow;
 	transition-duration: .13s;
 	transition-timing-function: linear;
 	-webkit-transition-property: height, box-shadow;
 	-webkit-transition-duration: .13s;
 	-webkit-transition-timing-function: linear;
-*/
+	z-index: 100;
 }
 
 .menu-links a {
@@ -417,8 +416,14 @@ button {
 	color: #141414;
 	border-color: #9a9a9a;
 	border-style: solid;
-	border-width: .12em .05em .07em .12em;
+	border-width: .07em .05em .12em .12em;
 	box-shadow: inset .01em .01em .1em #9a9a9a;
+	cursor: pointer;
+}
+
+button:active {
+	border-width: .12em .12em .07em .05em;
+	color: #7fccff;
 }
 
 @media all and (max-width: 35.2em){
